juc 相关 stream 相关

--- a/markdown/202004/2020_0408_juc.md
+++ b/markdown/202004/2020_0408_juc.md
@@ -1,4 +1,4 @@
-# java并发编程系列-同步器/常用并发类/happen-before
+# java并发编程系列-同步器/happen-before
 
 ## 1. 同步器
 
@@ -153,7 +153,7 @@ public class AAMZTest {
                     semaphore.acquire();
                     System.out.println(Thread.currentThread().getName() + "\t抢到车位");
                     int stop = new Random().nextInt(10);
-                    TimeUnit.SECONDS.sleep(stop);// 多线程休眠建议用改方式
+                    TimeUnit.SECONDS.sleep(stop);
                     System.out.println(Thread.currentThread().getName() + "\t停车"+stop+"秒后,离开车位");
                 } catch (InterruptedException e) {
                     e.printStackTrace();
@@ -168,11 +168,14 @@ public class AAMZTest {
 
 
 
-## 2. 并发相关常用类
+信号量和线程池的区别：
 
-1. ## 
+1）线程池是会开启新线程，而信号量不开启新线程，信号量所谓的新线程是使用者自己开启的。
+2）线程池等到线程结束后会自动释放许可，信号量的许可不管是获取还是释放，都需要手动操作。
 
-## 3. 内存一致性属性（happens-before）
+在高并发的应用场景中，我们可能经常会有限流的操作，就是让接口同时接受的请求数量有一个上限，达到上限，其他的就要等待，这里就可以用信号量来解决。还有，假如有两个方法A和B，我们不希望这两个方法同时被执行，在同一时间，只允许一个方法被执行，那么我们仍然可以用信号量来解决
+
+## 2. 内存一致性属性（happens-before）
 
 通常探讨这个问题的场景，异步线程，一个写一个读，不能确保写是在读之前的。所以java定义了一下规则：
 
