--- a/markdown/202004/2020_0409_sleep.md
+++ b/markdown/202004/2020_0409_sleep.md
@@ -1,4 +1,9 @@
-# TimeUnit和Thread sleep对比
+# 多线程TimeUnit和Thread sleep对比
+
+Thread.sleep 接受一个长整型的毫秒作为参数
+
++ TimeUnit 的可读性比Thead.sleep的可读性好
++ 这个例子我sleep的参数用的一样，Thread.sleep其实是要传毫秒的，导致了效果差别很大（看起来TimeUnit等待了，Thread.sleep没有等待）
 
 ```java
 public static void main(String[] args) throws InterruptedException {
@@ -14,7 +19,7 @@ public static void main(String[] args) throws InterruptedException {
                     int stop = new Random().nextInt(10);
 //                    TimeUnit.SECONDS.sleep(stop);
 // 					该处这两个使用对于功能目的是一样的，但是Thread.sleep没有真正休眠了
-                    Thread.sleep(stop);
+                    Thread.sleep(stop * 1000);
                     System.out.println(Thread.currentThread().getName() + "\t停车"+stop+"秒后,离开车位");
                 } catch (InterruptedException e) {
                     e.printStackTrace();
